k8s/k3s-home/argocd/development/wodplanner/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: wodplanner
  annotations:
    argocd.argoproj.io/sync-wave: "1"
